--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "vitest watch",
 		"test-ui": "vitest --ui",
 		"typecheck": "vitest typecheck",
-		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
+		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck && stylelint **/*.scss --fix",
 		"format": "prettier --write --log-level silent .",
 		"spellcheck": "cspell . --quiet",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
@@ -59,9 +59,13 @@
 		"msw": "^2.0.10",
 		"node-html-parser": "^6.1.11",
 		"prettier": "^3.1.0",
+		"stylelint": "^16.0.1",
+		"stylelint-config-scss": "1.0.0-security",
+		"stylelint-config-standard": "^35.0.0",
 		"svgo": "^3.0.5",
 		"tsx": "^4.6.2",
 		"typescript": "^5.3.3",
+		"typescript-plugin-css-modules": "^5.0.2",
 		"vite": "^5.0.6",
 		"vite-plugin-eslint": "^1.8.1",
 		"vitest": "^1.0.1"
